updated with latest version of file uploader and other blueimp libraries

--- a/jQuery-File-Upload.MVC3/Views/Home/Index.cshtml
+++ b/jQuery-File-Upload.MVC3/Views/Home/Index.cshtml
@@ -5,24 +5,24 @@
 
     Html.RequiresCss("Bootstrap/bootstrap.min.css", "Content", 2);
     Html.RequiresCss("Bootstrap/bootstrap-responsive.min.css", "Content", 3);
-    Html.RequiresCss("Bootstrap/bootstrap-image-gallery.min.css", "Content", 4);
+    Html.RequiresCss("Bootstrap/bootstrap-image-gallery.css", "Content", 4);
 
     Html.RequiresCss("FileUpload/jquery.fileupload-ui.css", "Content", 5);
     
     
-    Html.RequiresJs("jquery/1.7.1/jquery.min.js", "googleCDN", 1);
-    Html.RequiresJs("jqueryui/1.8.18/jquery-ui.min.js", "googleCDN", 2);
+    Html.RequiresJs("jquery/1.8.3/jquery.min.js", "googleCDN", 1);
+    Html.RequiresJs("jqueryui/1.9.1/jquery-ui.min.js", "googleCDN", 2);
 
-    Html.RequiresJs("FileUpload/tmpl.min.js", "Content", 5);
-    Html.RequiresJs("FileUpload/canvas-to-blob.min.js", "Content", 5);
-    Html.RequiresJs("FileUpload/load-image.min.js", "Content", 5);
+    Html.RequiresJs("FileUpload/tmpl.js", "Content", 5);
+    Html.RequiresJs("FileUpload/canvas-to-blob.js", "Content", 5);
+    Html.RequiresJs("FileUpload/load-image.js", "Content", 5);
 
-    Html.RequiresJs("Bootstrap/bootstrap-image-gallery.min.js", "Content", 6);
+    //Html.RequiresJs("Bootstrap/bootstrap-image-gallery.js", "Content", 6);
     Html.RequiresJs("Bootstrap/bootstrap.min.js", "Content", 6);
 
     Html.RequiresJs("FileUpload/jquery.iframe-transport.js", "Content", 10);
     Html.RequiresJs("FileUpload/jquery.fileupload.js", "Content", 10);
-    Html.RequiresJs("FileUpload/jquery.fileupload-ip.js", "Content", 20);
+    Html.RequiresJs("FileUpload/jquery.fileupload-fp.js", "Content", 20);
     Html.RequiresJs("FileUpload/jquery.fileupload-ui.js", "Content", 30);
 
     Html.RequiresJs("FileUpload/locale.js", "Content", 90);
